--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <tbody>
         <tr>
          <td>2021-2022</td>
-         <td>Chemist at superon sweistechnic ind ltd</td>
+         <td>Quality 35 superon sweistechnic ind ltd</td>
         </tr>
         <tr>
           <td>2022-till now</td>
